--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body {
-  background-color: url('istockphoto-171144548-612x612.jpg');
+  background-image: url('istockphoto-171144548-612x612.jpg');
 }
 
 p {
